--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "csurf": "latest",
     "date-fns": "^3.3.1",
     "express": "^4.18.2",
+    "express-csrf-double-submit-cookie": "^1.2.1",
     "express-session": "^1.18.0",
     "i18next-browser-languagedetector": "^7.2.0",
     "leaflet": "^1.9.4",
